# brainjot

./: .gitignore  index.html  package.json  task.md
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ContextualWorkspace.tsx  FocusMode.tsx  IdeaEvolution.tsx  LocalAIAgent.tsx  MemoryGraph.tsx  NoteEditor.tsx  NoteList.tsx  SettingsPanel.tsx  Sidebar.tsx  SmartSessions.tsx  SplitView.tsx  ThoughtStream.tsx  TimelineView.tsx  TitleBar.tsx
