[package]
name = "app"
version = "1.0.0"
description = "BrainJot - Smart Note Taking App"
authors = ["BrainJot"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
